# Elastos.CarrierClassic.Java

./: .gitignore  CMakeLists.txt  README.md  pom.xml
c_jni_src/: carrierHandler.c  utilsExt.c
c_jni_src/linux/: CMakeLists.txt  carrier.c  init.c  log.h  utils.c  utilsExt.c
c_jni_src/linux/include/: README.md
c_jni_src/windows/: CMakeLists.txt  carrier.c  init.c  utils.h  utilsExt.c  utilsExt.h
demo/: README.md
src/main/java/org/elastos/carrier/: Carrier.java  CarrierHandler.java  ConnectionStatus.java  FriendInviteResponseHandler.java  FriendsIterator.java  Group.java  GroupHandler.java  GroupPeersIterator.java  Log.java
src/main/java/org/elastos/carrier/filetransfer/: FileTransfer.java  FileTransferHandler.java  FileTransferInfo.java  FileTransferState.java  Manager.java  ManagerHandler.java
src/main/java/org/elastos/demo/: ElastosCarrier.java  MainApp.java  MainHandler.java
src/main/java/org/elastos/demo/common/: Synchronizer.java  TestOptions.java
src/main/java/org/elastos/demo/controller/: AddFriendController.java  AllFriendsController.java  ChatController.java  MainController.java  MyProfileController.java  RootController.java  WelcomeController.java  WelcomeDataController.java
src/main/resources/: add_friend.fxml  all_friends.fxml  chat.fxml  main.fxml  my_profile.fxml  root.fxml  welcome.fxml  welcome_data.fxml
src/main/resources/lib/: README.md
